manifests/02-web-app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-app-svc
  labels:
    svc: web-app-svc
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
  - name: http-8080
    protocol: TCP
    port: 8080
    targetPort: 8080
