manifests/03-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.minikube.local
    http:
      paths:
      - path: /heavywork
        pathType: Prefix
        backend:
          service:
            name: web-app-svc
            port:
              number: 8080
      - path: /lightwork
        pathType: Prefix
        backend:
          service:
            name: web-app-svc
            port:
              number: 8080
